Migrate from NameServiceDescriptor/NameService to InetAddressResolverProvider/InetAddressResolver